# GoogleResearchIdentityContrailsToReduceGlobalWarming

./: .gitignore  Makefile  README.md  pyproject.toml  run.sh  update-weight.sh
configs/: exp001.py  exp002.py  exp003.py  exp004.py  exp005.py  exp005_1.py  exp005_2.py  exp005_3.py  exp006.py  exp007.py  exp007_1.py  exp007_2.py  exp007_3.py  exp007_4.py  exp008.py  exp008_1.py  exp009.py  exp009_1.py  exp009_2.py  exp009_3.py  exp009_4.py  exp009_5.py  exp009_6.py  exp009_7.py  exp009_8.py  exp009_9.py  exp009_9_2nd.py  exp010.py  exp011.py  exp012.py  exp013.py  exp013_1.py  exp014.py  exp014_1.py  exp015.py  exp016.py  exp017.py  exp018.py  exp019.py  exp020.py  (+50 more)
scripts/: cv.py  infer.py  infer_cls.py  late_check_labels.py  make_cls_labels.py  make_fold.py  make_pseudo_label.py  make_pseudo_label_v2.py  plt_labels.py  prepare_data.py  test.py  train_seg.py  train_seg2.py
src/: augmentations.py  dataset.py  losses.py  metrics.py  models.py  optimizer.py  scheduler.py  train_tools.py  utils.py
