[project]
name = "contrails"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "daikichiba9511", email = "daikichiba.tech.ml@gmail.com" }
]
dependencies = [
    "numpy~=1.24.3",
    "pandas~=2.0.2",
    "matplotlib~=3.7.1",
    "seaborn~=0.12.2",
    "torch~=2.0.1",
    "transformers~=4.30.2",
    "torchvision~=0.15.2",
    "segmentation-models-pytorch~=0.3.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[[source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff~=0.0.272",
    "kaggle~=1.5.13",
    "ipython~=8.14.0",
    "jupyterlab~=4.0.2",
    "black~=23.3.0",
    "isort~=5.12.0",
    "wandb~=0.15.4",
    "typer[all]~=0.9.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
line_length = 88
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "E266",
    "E501",
    "W503",
    "B905",
    "B907"
]
exclude = "git,.venv,__pycache__,.github,.mypy_cache,.vscode,.pytest_cache,notebooks,.ipynb_checkpoints"

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
disallow_untyped_defs = true
allow_redefinition = true
warn_redundant_casts = true
show_error_context = true
incremental = false
no_implicit_optional = true
warn_unreachable = true
show_error_codes = true
pretty = true
disallow_incomplete_defs = true
warn_no_return = true
plugins = "numpy.typing.mypy_plugin"

